<resources>
    <string name="app_name">Мониторинг веса и ИМТ</string>

    <string name="title_screen">Мониторинг веса и ИМТ</string>
    <string name="hint_height">Рост, см</string>
    <string name="hint_weight">Вес, кг</string>
    <string name="btn_calculate">Рассчитать ИМТ</string>
    <string name="btn_save">Сохранить запись</string>
    <string name="result_placeholder">Результат расчёта появится здесь</string>
    <string name="history_title">История измерений</string>

    <string name="next">Далее</string>
    <string name="previous">Назад</string>
    <string name="hello_first_fragment">Первый фрагмент</string>
    <string name="hello_second_fragment">Второй фрагмент</string>
    <string name="first_fragment_label">Первый фрагмент</string>
    <string name="second_fragment_label">Второй фрагмент</string>
    <string name="action_settings">Настройки</string>
    <string name="lorem_ipsum">Тестовый текст</string>
</resources>